--- a/API Test/API Test.csproj
+++ b/API Test/API Test.csproj
@@ -51,6 +51,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helper\GlobalVariables.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Helper\GlobalVariables.Designer.cs">
+      <DependentUpon>GlobalVariables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsrRequestControl.cs">
@@ -61,6 +67,9 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Helper\GlobalVariables.resx">
+      <DependentUpon>GlobalVariables.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -100,6 +109,9 @@
       <Project>{fd86a364-3a29-4a6b-9ab8-89a147d07539}</Project>
       <Name>API.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
