--- a/API.Business/API.Business.csproj
+++ b/API.Business/API.Business.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalVars.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebRequest.cs" />
   </ItemGroup>
