--- a/API.Model/API.Model.csproj
+++ b/API.Model/API.Model.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiResponseStatus.cs" />
+    <Compile Include="GlobalVariable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestParam.cs" />
     <Compile Include="RequestType.cs" />
